2007-09-13  Wim Taymans  <wim.taymans@gmail.com>

	* plugins/elements/gstqueue.c: (gst_queue_handle_src_query):
	Queue can latency to the pipeline up to the configured max size in time.
	Report this fact in the latency query.

2007-09-13  Sebastian Dröge  <slomo@circular-chaos.org>

	Patch by: Sebastien Moutte <sebastien at moutte dot net>

	* libs/gst/controller/gstinterpolation.c:
	* libs/gst/controller/gstlfocontrolsource.c:
	Use gst_guint64_to_gdouble() when converting from a uint64 or
	GstClockTime to double to fix the build on win32. Fixes #474371.

2007-09-13  Sebastian Dröge  <slomo@circular-chaos.org>

	* gst/gstbuffer.c: (gst_buffer_finalize):
	Implement poisoning for GstBuffer if --enable-poisoning is specified.
	When finalizing a buffer the complete struct is filled with 0xff,
	thus making a use of the buffer after the final unref impossible.

2007-09-13  Sebastian Dröge  <slomo@circular-chaos.org>

	* tests/check/libs/controller.c: (GST_START_TEST):
	Use fail_unless_equals_int(a, b) instead of
	fail_unless_equals (a == b) to get better output on failures.

2007-09-12  Tim-Philipp Müller  <tim at centricular dot net>

	* tests/check/gst/gsturi.c:
	  Also check for the other file URI variant on win32.

2007-09-12  Tim-Philipp Müller  <tim at centricular dot net>

	* gst/gsturi.c: (gst_uri_get_location):
	  If there's no hostname, we want to return 'c:/foo/bar.txt'
	  and not '/c:/foo/bar.txt' on Windows. Fixes #469402.

	* tests/check/gst/gsturi.c:
	  Unit test for the above and a few more things.

2007-09-11  Wim Taymans  <wim.taymans@gmail.com>

	* docs/design/part-live-source.txt:
	Add docs on how live sources should timestamp.

	* libs/gst/base/gstbasesrc.c: (gst_base_src_do_sync):
	Add some more debug info.
	For subclasses that are live and like to sync, add aditional startup
	latency to sync time and timestamps so that we timstamp according to the
	design doc.

2007-09-11  Tim-Philipp Müller  <tim at centricular dot net>

	* gst/gstbuffer.c: