@@ -106,8 +106,10 @@
        <listitem>
          <para>
           <option>--gst-debug-no-color</option> will disable color debugging
-          (you can also set the GST_DEBUG_NO_COLOR environment variable to 1
-           if you want to disable colored debug output permanently)
+          You can also set the GST_DEBUG_NO_COLOR environment variable to 1
+          if you want to disable colored debug output permanently. Note that
+          if you are disabling color purely to avoid messing up your pager
+          output, trying using <command>less -R</command>.
          </para>
        </listitem>
        <listitem>
